[package]
name = "iced-test"
version = "0.1.0"
edition = "2021"
authors = ["1024bees <jimmy@1024bees.com>"]
description = "Testing utilities for the Iced GUI library"
readme = "README.md"
keywords = ["gui", "ui", "graphics", "interface", "widgets", "iced"]
categories = ["gui"]



[dependencies]

iced = {git = "https://github.com/1024bees/iced", branch="headless" }
iced_graphics = {git = "https://github.com/1024bees/iced", branch="headless" }

iced_native = {git = "https://github.com/1024bees/iced", branch="headless" }
iced_winit = {git = "https://github.com/1024bees/iced", branch="headless" }

[dependencies.winit]
version = "0.25"
git = "https://github.com/iced-rs/winit"
rev = "1e6623c4d06d110e5408dcbdf1edebd07e6a200e"
