[package]
name = "iced_test"
version = "0.1.0"
edition = "2021"
authors = ["1024bees <jimmy@1024bees.com>"]
description = "Testing utilities for the Iced GUI library"
readme = "README.md"
keywords = ["gui", "ui", "graphics", "interface", "widgets", "iced"]
categories = ["gui"]



[dependencies]

iced = {git = "https://github.com/iced-rs/iced", branch="master" }
iced_graphics = {git = "https://github.com/iced-rs/iced", branch="master" }
iced_native = {git = "https://github.com/iced-rs/iced", branch="master" }
iced_winit = {git = "https://github.com/iced-rs/iced", branch="master" }
iced_wgpu = {git = "https://github.com/iced-rs/iced", branch="master" }
iced_core = {git = "https://github.com/iced-rs/iced", branch="master" }
#iced_glutin = {git = "https://github.com/iced-rs/iced", branch="master", optional=true }
iced_glow = {git = "https://github.com/iced-rs/iced", branch="master", optional=true }

raw-window-handle = "0.4"
futures = "0.3"

wgpu = {version = "0.12"}
png = "0.17.2"





[dependencies.winit]
version = "0.26"
git = "https://github.com/iced-rs/winit"
rev = "02a12380960cec2f351c09a33d6a7cc2789d96a6"


#[dependencies.glutin]
#version = "0.27"
#git = "https://github.com/iced-rs/glutin"
#rev = "492c20605907accf2b5dc2da52284305fd128346"
#optional=true

[dev-dependencies]
tempfile = "*"




[features]
#default uses wgpu for rendering
default = []
# uses iced_glow over iced_wgpu
#glow = ["iced_glutin", "iced_glow", "glutin"]


[workspace]

members = [
    "examples/counter",
]
